# auto-sql

./: Cargo.toml
auto-sql-macros/: Cargo.toml
auto-sql-macros/src/: lib.rs
src/: commons.rs  lib.rs  main.rs
src/entities/: cake.rs  mod.rs  tasks.rs
src/representation/: intermediate.rs  mod.rs
