[package]
name = "auto-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["auto-sql-macros"]

[workspace.dependencies]
syn = "2.0.39"
quote = "1.0.33"
proc-macro-crate = "2.0.0"
proc-macro2 = "1.0.69"

[dependencies]

async-trait = "0.1.74"
chrono = "0.4.31"
derive_builder = "0.12.0"
uuid = "1.6.1"
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
auto-sql-macros = { path = "auto-sql-macros" }
